--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "ggm",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.4"
+    "express": "^4.16.2",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   }
 }
