--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "author": "ggm",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2",
+    "body-parser": "^1.18.2",
+    "express": "^4.15.4",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
+  },
+  "engines": {
+    "node": "8.9.0",
+    "npm": "5.5.1"
   }
 }
